feat: Display user name on admin dashboard

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -24,7 +24,7 @@
                 <th>Timestamp (UTC)</th>
                 <th>Site</th>
                 <th>Event Type</th>
-                <th>User Name</th> {/* <-- ADD THIS HEADER */}
+                <th>User Name</th>
                 <th>Device ID</th>
                 <th>Geo (Lat, Lon)</th>
             </tr>
