--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top"> 
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="/static/placeholder-logo.png" alt="Logo"> 
+                <img src="/static/wsp-logo.png" alt="Logo"> 
                 Greensboro Check-in
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
