--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="/static/wsp-logo.png" alt="Logo"> 
-                Greensboro Check-in
+                Greensboro Office Check-ins Tracker
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
