--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top"> 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"> 
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="/static/wsp-logo.png" alt="Logo"> 
