Changed instanced of Greensboro to Greenville

--- a/app/templates/scan.html
+++ b/app/templates/scan.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Scan - Greensboro Check-in{% endblock %}
+{% block title %}Scan - Greenville Check-in{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
