--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Greensboro Office Check-ins Tracker {% endblock %}</title>
+    <title>{% block title %}Greenville Office Check-ins Tracker {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body { padding-top: 56px; /* Adjust padding to avoid navbar overlap */ }
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="/static/wsp-logo.png" alt="Logo"> 
-                Greensboro Office Check-ins Tracker
+                Greenville Office Check-ins Tracker
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
